# hyraxiumAi

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  hyrax.service  pyproject.toml
docs/superpowers/plans/: 2026-03-23-hyrax-bot.md
docs/superpowers/specs/: 2026-03-23-hyrax-bot-design.md
src/hyrax/: bot.py  brain.py  commands.py  config.py  main.py  memory.py  scheduler.py  web.py
tests/: conftest.py  test_bot.py  test_brain.py  test_commands.py  test_config.py  test_memory.py  test_scheduler.py  test_web.py
